Add JVM chapters 13-18: JMM volatile happens-before, synchronized lock upgrade, SafePoint, JFR diagnosis, virtual threads, advanced parameters